Fix all tests with jwt token